@@ -1,4 +1,5 @@
 0.04
+ - Move code for imagemap() to Image::Keyboard::ImageMap::Tags.
  - Rewrite Changes file to CPAN::Changes::SPEC format.
 
 0.03 2013-08-27
